--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Proyecto Web — Acerca</title>
-  <link rel="stylesheet" href="/CSS/acerca.css" />
+  <link rel="stylesheet" href="acerca.css" />
 </head>
 <body>
   <header class="encabezado">
@@ -23,31 +23,31 @@
       <h2>Personajes Principales</h2>
     <div class="cosota">
       <div class="tarjeta">
-        <img src="/imagenes/Ichigo.jpg" alt="Ichigo Kurosaki">
+        <img src="Ichigo.jpg" alt="Ichigo Kurosaki">
         <h3>Ichigo Kurosaki</h3>
         <p>El personaje Principal de Bleach, el shinigami sustituto.</p>
       </div>
 
       <div class="tarjeta">
-        <img src="/imagenes/Rukia.jpg" alt="Rukia Kuchiki">
+        <img src="Rukia.jpg" alt="Rukia Kuchiki">
         <h3>Rukia Kuchiki</h3>
         <p>La shinigami que cambia el destino de Ichigo al transferirle sus poderes.</p>
       </div>
 
       <div class="tarjeta">
-        <img src="/imagenes/Orihime.jpg" alt="Orihime Inoue">
+        <img src="Orihime.jpg" alt="Orihime Inoue">
         <h3>Orihime Inoue</h3>
         <p>La mejor amiga de Ichigo que lo ayuda en cada momento.</p>
       </div>
 
       <div class="tarjeta">
-        <img src="/imagenes/utryu.jpg" alt="Uryu Ishida">
+        <img src="utryu.jpg" alt="Uryu Ishida">
         <h3>Uryu Ishida</h3>
         <p>Amigo de Ichigo este es un Quincy, traicióna a ichigo.</p>
       </div>
       
       <div class="tarjeta">
-        <img src="/imagenes/chad.jpg" alt="Yasutora Sado">
+        <img src="chad.jpg" alt="Yasutora Sado">
         <h3>Yasutora Sado(Chad)</h3>
         <p>El mejor amigo de Ichigo este es un Fullbringer.</p>
       </div>
@@ -59,7 +59,7 @@
       <!-- Reemplaza el src con un video educativo o mapa -->
       <div class="iframe-wrap">
         <iframe
-          src="/imagenes/Official JUMP FESTA Trailer  BLEACH Thousand-Year Blood War  VIZ - vizmedia (1080p, h264).mp4"
+          src="Official JUMP FESTA Trailer  BLEACH Thousand-Year Blood War  VIZ - vizmedia (1080p, h264).mp4"
           title="Recurso educativo"
           loading="lazy"
           allowfullscreen>
@@ -72,7 +72,7 @@
       <center>  
       <h2>Enlaces Útiles</h2>
       <ul>
-        <li><a href="/html/index.html">Volver a Inicio</a></li>
+        <li><a href="index.html">Volver a Inicio</a></li>
         <li><a href="https://developer.mozilla.org/es/" target="_blank" rel="noopener">Sigueme en github meehehehe</a></li>
       </ul>
       </center>
@@ -85,3 +85,4 @@
   </center>
 </body>
 </html>
+
