Change trailer video source to YouTube
Updated the trailer video source to a YouTube link.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- Reemplaza el src con un video educativo o mapa -->
       <div class="iframe-wrap">
         <iframe
-          src="Official JUMP FESTA Trailer  BLEACH Thousand-Year Blood War  VIZ - vizmedia (1080p, h264).mp4"
+          src="https://www.youtube.com/watch?v=78WIYzX_m98"
           title="Recurso educativo"
           loading="lazy"
           allowfullscreen>
@@ -85,4 +85,5 @@
   </center>
 </body>
 </html>
+
 
