Fix HTML structure and update video embed

--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
       <center><h2 class="h2_trailer">Trailer Bleach Nueva temporada</h2></center>
       <!-- Reemplaza el src con un video educativo o mapa -->
       <div class="iframe-wrap">
-        <iframe
-          src="https://www.youtube.com/watch?v=78WIYzX_m98"
-          title="Recurso educativo"
-          loading="lazy"
-          allowfullscreen>
-        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/78WIYzX_m98?si=csytlujlX9pgV6KU"
+            title="YouTube video player" frameborder="0" allow="accelerometer;
+            autoplay; clipboard-write;
+            encrypted-media
+            gyroscope;
+            picture-in-picture;
+            web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+          </iframe>
       </div>
       <center><p color="white">El trailer de el ultimo arco de Bleach fue lanzado hace 3 años y se espera que la serie finalice en 2026.</p></center>
     </section>
@@ -85,5 +88,6 @@
   </center>
 </body>
 </html>
+
 
 
