Update links in index.html to point to live site

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Acerca de <strong>Bleach</strong></h1>
     <nav class="menu">
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="acerca.html" class="activo">Acerca</a></li>
+        <li><a href="https://yw4ch6.github.io/index/">Inicio</a></li>
+        <li><a href="https://yw4ch6.github.io/acerca/" class="activo">Acerca</a></li>
       </ul>
     </nav>
   </header>
@@ -88,6 +88,7 @@
   </center>
 </body>
 </html>
+
 
 
 
