Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
           </iframe>
       </div>
-      <center><p color="white">El trailer de el ultimo arco de Bleach fue lanzado hace 3 años y se espera que la serie finalice en 2026.</p></center>
+      <center><p>El trailer de el ultimo arco de Bleach fue lanzado hace 3 años y se espera que la serie finalice en 2026.</p></center>
     </section>
 
     <section class="final">
@@ -84,11 +84,12 @@
   </main>
 
   <footer>
-    <center><p color="white">Hecho por Santiago Tigreros Santibañez — Decimo</p></center>
+    <center><p>Hecho por Santiago Tigreros Santibañez — Decimo</p></center>
   </footer>
   </center>
 </body>
 </html>
+
 
 
 
