Revise content and links in index.html
Updated links and content related to Bleach.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h2>Enlaces Útiles</h2>
       <ul>
         <li><a href="index.html">Volver a Inicio</a></li>
-        <li><a href="https://developer.mozilla.org/es/" target="_blank" rel="noopener">Sigueme en github meehehehe</a></li>
+        <li><a href="https://bleach.fandom.com/es/wiki/Bleach_Wiki" target="_blank" rel="noopener">Lee mas sobre Bleach</a></li>
       </ul>
       </center>
     </section>
@@ -89,6 +89,7 @@
   </center>
 </body>
 </html>
+
 
 
 
